--- a/bitHubSida/verkefni53.html
+++ b/bitHubSida/verkefni53.html
@@ -19,8 +19,8 @@
         <h3 class=" ">Verkefni 5.3</h3>
         <nav>
           <a href="../">VEFÞ1VG05AU | </a> <!-- "../" Upp um eina möppu -->
-          <a href=" ">Bakgrunnar | </a>
-          <a href=" ">Efnisyfirlit</a>
+          <a href="verkefni53 ">Bakgrunnar | </a>
+          <a href="index.html ">Efnisyfirlit</a>
         </nav>
       </div>
     </header>
@@ -162,11 +162,12 @@
       <nav>
         <h4>Innri tenglar <em>(relative links)</em></h4>
         <ul>
-          <li><a href="verk4.html">Forsíða</a></li>
+          <li><a href="../">Forsíða</a></li>
           <li><a href="verk3.html">Verk 3</a></li>
           <li><a href="werkefni2.html">Verk 2</a> </li>
           <li><a href="verkefni1.html">Verk 1</a> </li>
           <li><a href="verkefni52.html">Brandarar</a> </li>
+          <li><a href="index.html">Efnisyfirlit</a> </li>
           
         </ul>
       </nav>
